--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Fabiane Almeida">
+	<meta name="description" content="">
+    	<meta name="author" content="Fabiane Almeida">
 
 	<title>Título</title>
 	<!-- Latest bootstrap compiled minified CSS -->
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="www.//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<!--Font-Awesome-->
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="www.//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<!--Favicon-->
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<!--Habilita MS no Bootstrap Css-->
@@ -96,8 +96,9 @@
 <script src="js/jquery.flexisel.js"></script>
 <!-- Google -->
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script><!--google maps-->
-
-
+<!--CUSTOM.JS-->
+<script src="js/custom.js"></script>
+	
 <!--SCRIPTS===========================================-->
 <!--GOOGLE MAPS=======================================-->
 
