Limpando e inserindo js
- Limpado arquivo, arrumando indentação
- Alterado nome para index_clean.html
- Inserido link para js/custom.js

--- a/index_clean.html
+++ b/index_clean.html
@@ -4,21 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Fabiane Almeida">
+    	<meta name="description" content="">
+   	<meta name="author" content="Fabiane Almeida">
 
 	<title>Título</title>
 	<!-- Latest bootstrap compiled minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://www.maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!--Font-Awesome-->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="http://www.netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<!--Favicon-->
 	<link rel="shortcut icon" href="ico/favicon.ico">
 
 </head>
 <body>
-
-
 
 <!--ARQUIVOS SCRIPTS==================================-->
 <!--Latest jQuery minified JS-->
@@ -27,6 +25,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--Faz o responsive funcionar em browsers antigos.-->
 <script src="js/respond.js"></script>
+<!--Js Personalizado.js-->
+<script src="js/custom.js"></script>
 <!--SCRIPTS===========================================-->
 
 
