--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 	<title>Título</title>
 	<!-- Latest bootstrap compiled minified CSS -->
-	<link rel="stylesheet" href="www.//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<!--Font-Awesome-->
-	<link href="www.//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<!--Favicon-->
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<!--Habilita MS no Bootstrap Css-->
