--- a/index_clean.html
+++ b/index_clean.html
@@ -9,7 +9,7 @@
 
 	<title>Título</title>
 	<!-- Latest bootstrap compiled minified CSS -->
-	<link rel="stylesheet" href="https://www.maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!--Font-Awesome-->
 	<link href="http://www.netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<!--Favicon-->
@@ -22,7 +22,7 @@
 <!--Latest jQuery minified JS-->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <!-- Latest bootstrap minified JS -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!--Faz o responsive funcionar em browsers antigos.-->
 <script src="js/respond.js"></script>
 <!--Js Personalizado.js-->
