--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 	<title>Título</title>
 	<!-- Latest bootstrap compiled minified CSS -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!--Font-Awesome-->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<!--Favicon-->
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<!--Habilita MS no Bootstrap Css-->
@@ -87,7 +87,7 @@
 <!--Latest jQuery minified JS-->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <!-- Latest bootstrap minified JS -->
-<script src="${9://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/}bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!--Faz o responsive funcionar em browsers antigos.-->
 <script src="js/respond.js"></script>
 <!--Fotorama-->
